Added semantic HTML

--- a/index.html
+++ b/index.html
@@ -1,1 +1,139 @@
-Hello, world
+<header>
+    <h1>
+        The Enduring Legacy of Keith Haring: An Icon of Pop Art and Social Activism
+      </h1>
+      
+      <div>
+          Author: Yvonne Ye 
+          Date:2/3/2024
+      </div>
+</header>
+
+<section> class="intro"
+    <h2>The Early Beginnings: 1958-1978</h2>
+    <p>
+      Keith Haring's journey into the art world began with his birth on May 4, 1958,
+      in Reading, Pennsylvania. Growing up in nearby Kutztown, Haring developed a
+      fascination with art from a young age, influenced by his father, an amateur
+      cartoonist. His early exposure to cartoon art would later become a significant
+      element in his own work. The late 1970s marked a pivotal moment for Haring
+      when he moved to New York City to attend the School of Visual Arts (SVA). This
+      period not only honed his artistic skills but also immersed him in the vibrant
+      street culture of the city, which would become a central theme in his art.
+    </p>
+</section>
+
+<section> class"Life Span"
+    <h2>Art Style: The Visual Language of Keith Haring</h2>
+    <p>
+        Keith Haring's art style is immediately recognizable for its vibrant, dynamic
+        figures and a sense of movement and energy. Drawing inspiration from graffiti,
+        pop art, and Egyptian hieroglyphics, Haring developed a unique visual language
+        that communicated complex messages in an accessible way. His work often
+        featured recurring motifs, such as barking dogs, flying saucers, and dancing
+        figures, each symbolizing different themes or social issues. Haring's ability
+        to combine form and function, art and message, set him apart as an artist who
+        not only captured the zeitgeist of his time but also used his canvas as a tool
+        for change.
+      </p>
+</section>
+
+<section>
+    <h2>The Subway Drawings: 1980-1985</h2>
+    <p>
+      By the early 1980s, Keith Haring had found his canvas in the unused
+      advertising spaces of New York City's subway stations. Using white chalk on
+      the black matte paper backgrounds, Haring created hundreds of these public
+      artworks, characterized by their bold lines, vivid colors, and kinetic
+      figures. This period was significant for Haring, as the subway drawings helped
+      to democratize art, making it accessible to the everyday commuter. His art was
+      not confined to the galleries; it was a part of the urban landscape,
+      reflecting the city's dynamic energy and diverse population.
+    </p>
+</section>
+
+<section>
+    <h2>Rise to Fame: 1986-1989</h2>
+    <p>
+        Keith Haring's influence and recognition grew rapidly during the mid-1980s.
+        His distinctive style, marked by simple shapes and bright colors, resonated
+        with a wide audience. Haring's art was featured in numerous solo exhibitions
+        around the world, from the Tony Shafrazi Gallery in New York to the Stedelijk
+        Museum in Amsterdam. His work during this period tackled more socio-political
+        themes, including apartheid, the crack cocaine epidemic, and AIDS awareness,
+        showcasing his commitment to activism through art.
+      </p>
+
+</section>
+
+<section>
+    <h2>Collaborations and Influence: 1980s</h2>
+    <p>
+      Throughout his career, Keith Haring collaborated with several artists and
+      friends, notably Jean-Michel Basquiat and Andy Warhol, who were both
+      influential in their own right. These collaborations were a fusion of
+      different artistic styles and ideologies, showcasing the interconnectedness of
+      the art community in New York City during the 1980s. Haring's ability to blend
+      his unique style with the works of others highlighted his adaptability and
+      willingness to explore new artistic territories.
+    </p>
+</section>
+
+<section>
+    <h2>The Pop Shop: 1986</h2>
+    <p>
+      In 1986, Haring opened the Pop Shop in SoHo, New York City, a retail store
+      selling T-shirts, toys, posters, and other items featuring his designs. The
+      Pop Shop was an extension of his desire to make his art more accessible to the
+      public. Despite criticism from some corners of the art world, Haring remained
+      committed to his belief that art should be for everyone, not just the elite.
+      The Pop Shop became a cultural landmark, embodying the spirit of the 1980s art
+      scene in New York.
+    </p>
+</section>
+
+<section>
+    <h2>Legacy and Impact: 1990-Present</h2>
+    <p>
+      Keith Haring's untimely death on February 16, 1990, due to AIDS-related
+      complications, was a profound loss to the art world. However, his legacy
+      continues to thrive through his vibrant artwork and the Keith Haring
+      Foundation, established in 1989 to support AIDS organizations and children’s
+      programs. Haring's influence can be seen in the work of contemporary artists
+      and in popular culture, reflecting his vision of art as a universal language.
+      His commitment to social issues and his pioneering approach to public art have
+      cemented his status as a cultural icon.
+    </p>
+</section>
+
+<section>
+    <h2>Friendships that Shaped the Artist</h2>
+    <p>
+      Haring's relationships with his contemporaries, such as Jean-Michel Basquiat
+      and Andy Warhol, were not merely social but deeply influential in shaping his
+      artistic perspective and career. These friendships provided him with critical
+      support and collaborative opportunities, allowing him to navigate the
+      complexities of the art world while fostering a sense of community among
+      artists. Warhol, in particular, served as a mentor to Haring, offering
+      guidance on navigating the intersection of art and commerce. Basquiat and
+      Haring shared a mutual respect and an understanding of the power of art as a
+      tool for social commentary, often discussing themes that would later appear in
+      their work.
+    </p>
+</section>
+
+<section>
+    <h2>A Circle of Creativity and Activism</h2>
+    <p>
+      The camaraderie among Haring and his friends extended beyond personal
+      interactions, evolving into a dynamic circle of creativity and activism. This
+      group of artists frequently collaborated on projects that combined their
+      artistic talents with a shared commitment to social causes, such as AIDS
+      awareness and anti-apartheid efforts. Their collective work not only pushed
+      the boundaries of art but also amplified their voices in the socio-political
+      landscape of the time. This fusion of art and activism remains a testament to
+      the enduring impact of their friendships on Haring's work and on the broader
+      art community.
+    </p>
+       
+</section>
