--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Enduring Legacy of Keith Haring</title>
+    <link rel="stylesheet" href="./style.css"
   </head>
+
   <body>
     <header>
       <h1>
